Minor optimize